<?php
declare(strict_types=1);
interface PlaneMesuration {
    public function calculateArea(): float;
}